--- a/docs/_404.md
+++ b/docs/_404.md
@@ -1,1 +1,8 @@
-我免费了
+<div class="page-404">
+  <div class="content-404">
+    <p>这是404页面</p>
+    <p>为什么会来到这里？那我可不知道为啥，我建议你回到首页！</p>
+    <p>嗯，点击左侧logo就可以哦</p>
+    <p>Bye。</p>
+  </div>
+</div>
